<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/petImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/pet_image_url"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:textColor="#1A237E"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/petImageView"
            app:layout_constraintEnd_toStartOf="@id/editButton"
            app:layout_constraintTop_toTopOf="@id/petImageView" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="#888888"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/petImageView"
            app:layout_constraintEnd_toStartOf="@id/editButton"
            app:layout_constraintTop_toBottomOf="@id/nameTextView" />

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="#888888"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/petImageView"
            app:layout_constraintEnd_toStartOf="@id/editButton"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView" />

        <Button
            android:id="@+id/editButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/petImageView"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/deleteButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/delete"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/editButton"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
